1/31/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.5 'Marshal West':
	- hostname-to-ip-address resolution fixed;

1/26/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.4 'Marshal West':
	- SSLv2 support removed;
	- OpenSSL 1.1.0 support added.
	
12/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.3 'Marshal West':
	- Redis read message queue backlog fixed.
	- Typos fixed in the docs.
	
11/10/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.2 'Marshal West':
	- TLS connection procedure improved in uclient test program.
	- Reliability improvements (Issue 141).
	- external address mapping fixes for Amazon EC2.
	- docs fixes.

11/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.1 'Marshal West':
	- Request re-transmission implemented in uclient test program.
	- TLS connection procedure improved in uclient test program.

10/31/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.6 'Marshal West':
	- Relay RTCP sockets ports allocation fixed.
	- SSL renegotiation callback fixed.
	- List of libraries cleaned.
	- Debian UFW file added to the Debian package.

10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.5 'Marshal West':
	- Mobile sessions authentication improved.
	- Authentication code cleaning.
	- Quota allocation fixed.
	- Core dump fixed.
	- Memory code cleaning.
	- Logging code cleaning.
	- TCP/TLS tests improved.
	- relay RTCP sockets ports allocation fixed.
	
09/05/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.4 'Marshal West':
	- TLS renegotiation DoS attack prevention implemented (Issue 136);
	- FQDN is allowed as a relay-ip or a listener-ip parameter
	(patch provided by Iñaki Baz Castillo).
	
09/01/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.3 'Marshal West':
	- Redis DB user key database operation fixed.
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.2 'Marshal West':